dropdown navigation overlapping on project nav fixed

--- a/rooffers/themes/admin/css/screen-admin.css
+++ b/rooffers/themes/admin/css/screen-admin.css
@@ -15,7 +15,8 @@ body {
 /* - sticky project tab menu - */
 #stickypnav-outer{ min-height: 95px;}
 #stickypnav-outer .stickypnav{ background-color: #FFF; border-bottom: 1px solid #FFF; position: relative;}
-#stickypnav-outer .stickypnav.sticky{ position: fixed; left: 0; right: 0; top: 0; border-bottom-color: #ddd; padding: 10px 35px 5px; z-index: 1010;}
+#stickypnav-outer .stickypnav.sticky{ position: fixed; left: 0; right: 0; top: 0; border-bottom-color: #ddd; padding: 10px 35px 5px;}
+#stickypnav-outer .stickypnav.highz{ z-index: 9999;}
 
 /* - button style checkbox radio - */
 .cuschk-group{}
